lib/luatos-soc-2022/tools/dtools/ecfota-ec618-svc.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: ecfota-ec618-svc
  namespace: ecfota
spec:
  ports:
  - name: http
    port: 9000
    targetPort: 9000
  selector:
    app: ecfota-ec618-http
---
